# localmind

./: .gitignore  LICENSE  README.md  pyproject.toml
src/localmind/: __init__.py  agents.py  cli.py  config.py  memory.py  rag.py  server.py
tests/: __init__.py  test_memory.py  test_rag.py
